# maxima_comm

./: .gitignore  CMakeLists.txt  buid.sh  build.sh  maxima_comm.h  maxima_exc.h  maxima_test.cpp
include/: maxima_comm.h  maxima_exc.h
slice/: Maxima.cpp  Maxima.h  Maxima.ice
src/matrix_exp/: main.cpp  pchelExp.h  simpleExp.h
src/maximaDispatcher/: .main.cpp.swp  WorkerQueue.h  main.cpp
src/maximaWorker/: client.cpp  main.cpp
src/maxima_comm/: maxima_comm.cpp
src/maxima_test/: maxima_test.cpp
